--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "movieappwithreact",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://Naingmoekhant0098.github.io/react_movie",
+  "homepage": "http://Naingmoekhant0098.github.io/react_movie",
   "dependencies": {
+    "@floating-ui/react-dom": "^2.0.9",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,30 +15,27 @@
     "git": "^0.1.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-awesome-button": "^7.0.5",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.2.1",
     "react-player": "^2.14.1",
+    "react-rating": "^2.0.5",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "react-tabs": "^6.0.2",
+    "react-tooltip": "^5.26.4",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy" : "gh-pages -d build"
+    "start": "react-scripts start"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
@@ -50,8 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
   }
 }
