--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://Naingmoekhant0098.github.io/Central-Movie.git",
+  "homepage" : "http://Naingmoekhant0098.github.io/Central-Movie",
   "name": "movieappwithreact",
   "version": "0.1.0",
   "dependencies": {
